fixed a styling issue; language switch was too small

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -71,6 +71,10 @@
     &__right {
       display: flex;
       align-items: center;
+
+      &-language-switch-wrapper {
+        width: 4rem;
+      }
     }
 
   }
@@ -158,12 +162,13 @@
   .language-switch {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     width: 100%;
+    min-width: 10rem;
     position: relative;
 
     &__flag {
      width: 1.5rem;
+      margin-right: 0.5rem;
     }
 
     &__icon svg{
